--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/montserrat": "^5.2.5",
     "@tailwindcss/vite": "^4.0.15",
+    "@types/gsap": "^1.20.2",
+    "aos": "^2.3.4",
+    "flubber": "^0.4.2",
+    "framer-motion": "^12.6.0",
+    "gsap": "^3.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.15"
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-tsparticles": "^2.12.2",
+    "tailwindcss": "^4.0.15",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
