--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-responsive": "^10.0.1",
     "react-tsparticles": "^2.12.2",
     "tailwindcss": "^4.0.15",
     "tsparticles": "^3.8.1"
