--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-responsive": "^10.0.1",
     "react-tsparticles": "^2.12.2",
     "tailwindcss": "^4.0.15",
+    "three": "^0.174.0",
     "tsparticles": "^3.8.1"
   },
   "devDependencies": {
